fix: card-description mobile

--- a/src/blocks/card-description/card-description.css
+++ b/src/blocks/card-description/card-description.css
@@ -74,6 +74,7 @@
 .card-description__line {
   grid-column: 1/3;
   width: 100%;
+  background-color: rgba(84, 84, 84, 0.7);
 }
 
 @media all and (max-width: 950px) {
@@ -116,9 +117,8 @@
 
   .card-description__title {
     grid-row: 0/1;
-    font-size: 16px;
+    font-size: 18px;
     margin: 0;
-    text-decoration: underline;
   }
 
   .card-description__caption {
